# trade-agents

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
deployment/: deploy.py  test_deployment.py
eval/: test_eval.py
eval/data/: trade-agent.test.json
tests/: test_agents.py
trade_agent/: __init__.py  agent.py  prompt.py  tools.py
trade_agent/sub_agents/: __init__.py  fundamental_analyst.py  market_agent.py  news_analyst.py  options_agent.py  portfolio_agent.py  stock_analyst.py  technical_analyst.py
